* fix our photo filenames and blog post photos * try to get rid of the 'add to home screen' crap that shows up on mobile* update favicon

--- a/src/assets/stylesheets/deltacamp.css.scss
+++ b/src/assets/stylesheets/deltacamp.css.scss
@@ -742,7 +742,7 @@ input[type='radio'] {
 }
 
 .is-light {
-  color: lighten($link-color, 30%);
+  color: lighten($link-color, 20%);
 }
 
 .subtitle-1,
